Title and text edits

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>PIxEL - programmers + innovators * entrepreneurs + leaders</title>
         <meta name="description" content="PIxEL Clubs is a national organization of after-school high school clubs to teach students to pursue computer science through web tools, design, and business.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -48,7 +46,7 @@
             </div>
             <div class="expand-row" style="background-color: #FF7E79; height: 0px;">
                 <h1 class="tagline">For artists and designers.</h1>
-                <p>Case loves you. Instead of Albert Lee.</p>
+                <p>Hello world.</p>
             </div>
         </div>
         <div class="bg"></div>
