--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-        <link rel="stylesheet" href="css/colors.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -46,7 +45,18 @@
             </div>
             <div class="expand-row" style="background-color: #FF7E79; height: 0px;">
                 <h1 class="tagline">For artists and designers.</h1>
-                <p>Hello world.</p>
+            </div>
+            <div class="expand-row" style="background-color: #00F3FF; height: 0px;">
+                <h1 class="tagline">For hackers and coders.</h1>
+            </div>
+            <div class="expand-row" style="background-color: #75CBFE; height: 0px;">
+                <h1 class="tagline">For entrepreneurs and enterprisers.</h1>
+            </div>
+            <div class="expand-row" style="background-color: #FE89D7; height: 0px;">
+                <h1 class="tagline">For experts and beginners.</h1>
+            </div>
+            <div class="expand-row" style="background-color: #ECFF45; height: 0px;">
+                <h1 class="tagline">For you.</h1>
             </div>
         </div>
         <div class="bg"></div>
@@ -58,50 +68,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="js/jquery.typetype.min.js"></script>
-        <script>
-        /** blinkingCursor by Nathan Allen **/
-        function blinkingCursor(elem){
-            var elem = elem || document.querySelector('#blinking-cursor');
-            setInterval(function(){
-                elem.style.visibility = 'hidden';
-                setTimeout(function(){
-                    elem.style.visibility = '';
-                }, 600);
-            }, 1200);
-        }
 
-        setTimeout(function () {
-            $("h1#explain").typetype(
-                "programmers + innovators * entrepreneurs + leaders.", {
-                    t: 30,
-                    e: 0,
-                    keypress: function () {
-                        $("span#blinking-cursor").remove();
-                        $("h1#explain").delay(1000).append("<span id=\"blinking-cursor\">|</span>");
-                    },
-                    callback: function () {
-                        blinkingCursor(document.querySelector("span#blinking-cursor"));
-                        $("span#blinking-cursor").delay(4800).remove();
-                        $("h2#cta").append("<span id=\"blinking-cursor\">|</span>");
-                    }
-                });
-            $("h2#cta").delay(5000).typetype("Become a Charter Member today.", {
-                t: 60,
-                e: 0,
-                keypress: function () {
-                    $("span#blinking-cursor").remove();
-                    $("h2#cta").delay(1000).append("<span id=\"blinking-cursor\">|</span>");
-                    blinkingCursor(document.querySelector("span#blinking-cursor"));
-                },
-                callback: function () {
-                    blinkingCursor(document.querySelector("span#blinking-cursor"));
-                }
-            });
-        }, 3000);
-        
-        </script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
