cleaned up messy HTML

--- a/index.html
+++ b/index.html
@@ -20,43 +20,43 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div id="pillars">
-            <div class="pillar-row" style="background-color: #FF7E79">
-                <h1 class="tagline">For artists and designers.</h1>
+        <div id="intro-row-container">
+            <div class="intro-row red">
+                <h1>For artists and designers.</h1>
             </div>
-            <div class="pillar-row" style="background-color: #00F3FF">
-                <h1 class="tagline">For hackers and coders.</h1>
+            <div class="intro-row lightblue">
+                <h1>For hackers and coders.</h1>
             </div>
-            <div class="pillar-row" style="background-color: #75CBFE">
-                <h1 class="tagline">For entrepreneurs and enterprisers.</h1>
+            <div class="intro-row blue">
+                <h1>For entrepreneurs and enterprisers.</h1>
             </div>
-            <div class="pillar-row" style="background-color: #FE89D7">
-                <h1 class="tagline">For experts and beginners.</h1>
+            <div class="intro-row pink">
+                <h1>For experts and beginners.</h1>
             </div>
-            <div class="pillar-row" style="background-color: #ECFF45">
-                <h1 class="tagline">For you.</h1>
+            <div class="intro-row yellow">
+                <h1>For you.</h1>
             </div>
         </div>
         <div class="main" style="">
             <div id="header">
-                <img src="img/pxl-temp.png" width="400">
-                <h1 id="explain"></h1>
-                <h2 id="cta"></h2>
+                <img src="img/pxl-temp.png">
+                <h1 id="acronym"></h1>
+                <h2 id="description"></h2>
             </div>
-            <div class="expand-row" style="background-color: #FF7E79; height: 0px;">
-                <h1 class="tagline">For artists and designers.</h1>
+            <div class="expand-row red">
+                <h1>For artists and designers.</h1>
             </div>
-            <div class="expand-row" style="background-color: #00F3FF; height: 0px;">
-                <h1 class="tagline">For hackers and coders.</h1>
+            <div class="expand-row lightblue">
+                <h1>For hackers and coders.</h1>
             </div>
-            <div class="expand-row" style="background-color: #75CBFE; height: 0px;">
-                <h1 class="tagline">For entrepreneurs and enterprisers.</h1>
+            <div class="expand-row blue">
+                <h1>For entrepreneurs and enterprisers.</h1>
             </div>
-            <div class="expand-row" style="background-color: #FE89D7; height: 0px;">
-                <h1 class="tagline">For experts and beginners.</h1>
+            <div class="expand-row pink">
+                <h1>For experts and beginners.</h1>
             </div>
-            <div class="expand-row" style="background-color: #ECFF45; height: 0px;">
-                <h1 class="tagline">For you.</h1>
+            <div class="expand-row yellow">
+                <h1>For you.</h1>
             </div>
         </div>
         <div class="bg"></div>
