Groundwork for main content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>PIxEL - programmers + innovators * entrepreneurs + leaders</title>
         <meta name="description" content="PIxEL Clubs is a national organization of after-school high school clubs to teach students to pursue computer science through web tools, design, and business.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="pixel,pixel clubs,high school,programming,code">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -28,7 +29,7 @@
                 <h1>For hackers and coders.</h1>
             </div>
             <div class="intro-row blue">
-                <h1>For entrepreneurs and enterprisers.</h1>
+                <h1>For entrepreneurs and hustlers.</h1>
             </div>
             <div class="intro-row pink">
                 <h1>For experts and beginners.</h1>
@@ -37,32 +38,48 @@
                 <h1>For you.</h1>
             </div>
         </div>
-        <div class="main" style="">
+        <div class="main">
             <div id="header">
                 <img src="img/pxl-temp.png">
                 <h1 id="acronym"></h1>
                 <h2 id="description"></h2>
             </div>
             <div class="expand-row red">
-                <h1>For artists and designers.</h1>
+                <div class="col-md-4">
+                    <h1>For <wbr>artists&nbsp;&amp; designers.</h1>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                    PIxEL places an emphasis on lorem ipsum dolor 
+                    sit amet. 
+                    </p>
+                </div>
             </div>
             <div class="expand-row lightblue">
-                <h1>For hackers and coders.</h1>
+                <div class="col-md-6">
+                    <h1>For hackers &amp; coders.</h1>
+                </div>
             </div>
             <div class="expand-row blue">
-                <h1>For entrepreneurs and enterprisers.</h1>
+                <div class="col-md-6">
+                    <h1>For entrepreneurs &amp; hustlers.</h1>
+                </div>
             </div>
             <div class="expand-row pink">
-                <h1>For experts and beginners.</h1>
+                <div class="col-md-6">
+                    <h1>For experts &amp; beginners.</h1>
+                </div>
             </div>
             <div class="expand-row yellow">
-                <h1>For you.</h1>
+                <div class="col-md-6">
+                    <h1>For you.</h1>
+                </div>
             </div>
         </div>
         <div class="bg"></div>
 
         
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>s
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
