--- a/index.html
+++ b/index.html
@@ -56,23 +56,47 @@
                 </div>
             </div>
             <div class="expand-row lightblue">
-                <div class="col-md-6">
-                    <h1>For hackers &amp; coders.</h1>
+                <div class="col-md-4">
+                    <h1>For <wbr>hackers&nbsp;&amp; coders.</h1>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                    PIxEL places an emphasis on lorem ipsum dolor 
+                    sit amet. 
+                    </p>
                 </div>
             </div>
             <div class="expand-row blue">
-                <div class="col-md-6">
-                    <h1>For entrepreneurs &amp; hustlers.</h1>
+                <div class="col-md-4">
+                    <h1>For <wbr>entrepreneurs&nbsp;&amp; enterprisers.</h1>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                    PIxEL places an emphasis on lorem ipsum dolor 
+                    sit amet. 
+                    </p>
                 </div>
             </div>
             <div class="expand-row pink">
-                <div class="col-md-6">
-                    <h1>For experts &amp; beginners.</h1>
+                <div class="col-md-4">
+                    <h1>For <wbr>experts&nbsp;&amp; beginners.</h1>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                    PIxEL places an emphasis on lorem ipsum dolor 
+                    sit amet. 
+                    </p>
                 </div>
             </div>
             <div class="expand-row yellow">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <h1>For you.</h1>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                    PIxEL places an emphasis on lorem ipsum dolor 
+                    sit amet. 
+                    </p>
                 </div>
             </div>
         </div>
