Fixed logo image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="main">
             <div id="header">
-                <img src="img/pxl-temp.png">
+                <img src="img/logo.png">
                 <h1 id="acronym"></h1>
                 <h2 id="description"></h2>
             </div>
