More groundwork for body content

--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                    PIxEL places an emphasis on lorem ipsum dolor 
-                    sit amet. 
+                        Design is one of PIxEL's foundations for 
+                        For web projects, we 
+                        teach responsive web design using <a href="http://getbootstrap.com">Bootstrap</a> 
+                        and <a href="http://foundation.zurb.com">Foundation</a>.
                     </p>
                 </div>
+            </div>
+            <div class="parallax">
+                <img src="img/bg.png">
             </div>
             <div class="expand-row lightblue">
                 <div class="col-md-4">
@@ -66,6 +71,9 @@
                     </p>
                 </div>
             </div>
+            <div class="parallax">
+                <img src="img/bg.png">
+            </div>
             <div class="expand-row blue">
                 <div class="col-md-4">
                     <h1>For <wbr>entrepreneurs&nbsp;&amp; enterprisers.</h1>
@@ -77,6 +85,8 @@
                     </p>
                 </div>
             </div>
+            <div class="parallax">
+            </div>
             <div class="expand-row pink">
                 <div class="col-md-4">
                     <h1>For <wbr>experts&nbsp;&amp; beginners.</h1>
@@ -87,6 +97,8 @@
                     sit amet. 
                     </p>
                 </div>
+            </div>
+            <div class="parallax">
             </div>
             <div class="expand-row yellow">
                 <div class="col-md-4">
